# protmapper

./: .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
doc/: Makefile  conf.py  index.rst  make.bat  requirements.txt  rest_api.rst
doc/modules/: api.rst  index.rst  psp.rst  resources.rst  uniprot.rst
protmapper/: __init__.py  api.py  cli.py  curated_site_map.csv  phosphosite_client.py  refseq_client.py  resources.py  sars_cov_2_pre.py  uniprot_client.py
protmapper/other/: phospho_prior.py  process_brca_data.py
protmapper/rest_api/: __init__.py  __main__.py  api.py
protmapper/tests/: cli_input.csv  cli_input_peptide.csv  test_cache_read.pkl  test_cli.py  test_phosphosite_client.py  test_protmapper.py  test_uniprot_client.py
resources/: convert_site_map.py
rest_api/: api.py
sitemapper/: __init__.py  api.py  phosphosite_client.py  resources.py
sitemapper/tests/: test_cache.pkl  test_protmapper.py  test_sitemapper.py
